# oresight

./: .gitignore  Dockerfile  celery_config.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  run.py  tasks.py
app/: database.py  website_controller.py
app/controller/: chat_handler.py  website_controller.py
config/: logging_config.json  settings.py
crawler/: decover_spider.py  json_writer_pipeline.py  oresight_driver.py  website_crawler_scrapy.py
crawler/utils/: helper_methods.py
data/: test.html
entities/: prospect.py  website.py
frontend/: index.tsx  package.json
frontend/component/: MessageBlock.tsx  ProspectsTable.tsx
frontend/containers/Nav/: Navbar.tsx  NavbarExpanded.tsx
frontend/shared/: config.ts  utils.ts
index/: propsect.py  propsect_index.py
llm/: aiclient.py  benchmark.py  propsect_parser.py  util.py
llm/conversation/: conversation.py  message.py
llm/prompts/: prompts.py
middlewares/: remove_prefix_middleware.py
oresight-fe/: Dockerfile  package-lock.json
oresight-fe/public/: index.html
oresight-fe/src/: App.tsx  AppRoutes.tsx  index.css
oresight-fe/src/component/: CustomMarkdown.tsx  WebsiteModal.tsx  WebsitesTable.tsx
oresight-fe/src/containers/: Chat.tsx  Home.tsx
oresight-fe/src/containers/Nav/: NavbarCollapsed.tsx
oresight-fe/src/shared/: axios.ts  colors.ts  config.ts  types.ts
reader/: file.py
repositories/: prospect_repository.py  website_repository.py
