[tool.poetry]
name = "oresight"
version = "0.1.0"
description = ""
authors = ["ravi-xip <ravi@xip.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
openai = "^0.28.0"
langchain = "^0.0.293"
backoff = "^2.2.1"
flask = "^2.3.3"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

