[tool.poetry]
name = "oresight"
version = "0.1.0"
description = ""
authors = ["ravi-xip <ravi@xip.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
beautifulsoup4 = "^4.12.2"
openai = "^0.28.0"
langchain = "0.0.294"
backoff = "^2.2.1"
flask = "^2.3.3"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.1.1"
elasticsearch-dsl = "^8.9.0"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
pandas = "^2.1.0"
scipy = "^1.11.2"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

